--- a/assets/sass/layout/_centerdiv.scss
+++ b/assets/sass/layout/_centerdiv.scss
@@ -23,6 +23,9 @@
 		>.tags {
 			margin: 0 0 2rem 0;
 		}
+		img {
+			aspect-ratio: 1000 / 300;
+		    }
 	}
 
 
